# Game

./: .gitignore  .vscodeignore  CMakeLists.txt  CMakePresets.json  Game.sln  README.md
DemoEngine/: .vscodeignore  CMakeLists.txt  README.md
DemoEngine/3rd/: CMakeLists.txt
DemoEngine/3rd/7z/: CMakeLists.txt
DemoEngine/3rd/7z/7zxa/: CMakeLists.txt
DemoEngine/3rd/7z/LZMA/: CMakeLists.txt
DemoEngine/3rd/DirectX-Headers/: CMakeLists.txt
DemoEngine/3rd/FreeImage/: CMakeLists.txt
DemoEngine/3rd/FreeImage/FreeImageEntry/: CMakeLists.txt
DemoEngine/3rd/FreeImage/LibJPEG/: CMakeLists.txt
DemoEngine/3rd/FreeImage/LibJXR/: CMakeLists.txt
DemoEngine/3rd/NanoRtti/: CMakeLists.txt
DemoEngine/3rd/RmlUi/: CMakeLists.txt
DemoEngine/3rd/SDL3/: CMakeLists.txt
DemoEngine/3rd/assimp/: CMakeLists.txt
DemoEngine/3rd/d3dcompiler/: CMakeLists.txt
DemoEngine/3rd/dxsdk/: CMakeLists.txt  dxsdk.7z
DemoEngine/3rd/fmt/: CMakeLists.txt
DemoEngine/3rd/freetype/: CMakeLists.txt
DemoEngine/3rd/googletest/: CMakeLists.txt
DemoEngine/3rd/imgui/: CMakeLists.txt
DemoEngine/3rd/ogg/: CMakeLists.txt
DemoEngine/3rd/rapidxml/: CMakeLists.txt
DemoEngine/3rd/scope-lite/: CMakeLists.txt
DemoEngine/3rd/tracy/: CMakeLists.txt
DemoEngine/3rd/vorbis/: CMakeLists.txt
DemoEngine/3rd/zlib/: CMakeLists.txt
DemoEngine/Editor/: CMakeLists.txt  main.cpp
DemoEngine/Editor/src/: EditorConsolePanel.cpp  EditorDialogBoxManager.cpp  EditorGameViewPanel.cpp  EditorHierarchyPanel.cpp  EditorInspectorPanel.cpp  EditorMainBarPanel.cpp  EditorManagerD3D11.cpp  EditorProjectPanel.cpp  EditorRmlUiHost.cpp  Model.cpp  Model.h  RmlUiRenderInterfaceD3D11.cpp
DemoEngine/cmake/: Compiler.cmake  ExternalLib.cmake  Platform.cmake
DemoEngine/common/: CMakeLists.txt
DemoEngine/common/src/: DllLoader.cpp  ErrorHandling.cpp  Log.cpp  Timer.cpp  common.cpp
DemoEngine/common/test/: CMakeLists.txt  test_main.cpp  test_math.cpp
DemoEngine/core/: CMakeLists.txt
DemoEngine/core/core/: CMakeLists.txt
DemoEngine/core/plungins/: CMakeLists.txt
DemoEngine/core/src/: IContext.cpp  RenderableHelper.cpp  TexCompression.cpp
DemoEngine/core/test/: CMakeLists.txt  test_main.cpp
DemoEngine/math/: CMakeLists.txt
DemoEngine/math/src/: color.cpp  half.cpp  math.cpp  matrix.cpp  rotator.cpp
DemoEngine/math/test/: CMakeLists.txt  main.cpp  test_math.cpp
DemoEngine/tests/: CMakeLists.txt
DemoEngine/tests/src/: CTHashTest.cpp  ResLoaderTest.cpp  StringUtilTest.cpp  test.cpp  test_math.cpp
Editor/: CMakeLists.txt  game_main.cpp  main.cpp
Editor/include/editor/: EditorGameViewPanel.h  EditorMainBarPanel.h  EditorManagerD3D11.h  EditorProfilerPanel.h  GameApp.h
Editor/src/: EditorGameViewPanel.cpp  EditorHierarchyPanel.cpp  EditorInspectorPanel.cpp  EditorMainBarPanel.cpp  EditorManagerD3D11.cpp  EditorProfilerPanel.cpp  EditorProjectPanel.cpp  GameApp.cpp
Game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters  main.cpp
Game/Container/: Architecture.h  ArrayRef.hpp  CBlock.h  DataBuffer.cpp  DataBuffer.h  Hash.h  RenderVariable.cpp  RenderVariable.h  String.cpp  String.h  Thread.cpp  Thread.h  array_pod.h  char_traits.h  cvar_list.cpp  cvar_list.h  data.h  hash_list.h  i_varlist.h  inline.h  list_pod.h  macro.h  momery.h  octree.h  persistid.h  tchar.h  var_type.h  xtree.h
Game/Container/C++17/: C++17.h  filesystem.h  iterator.h  option.h  string_view.h
Game/Container/C++2X/: endian.hpp
Game/Core/: App.cpp  App.h  CHelper.cpp  CHelper.h  ClientPlayer.cpp  ClientPlayer.h  Context.cpp  Context.h  ContextRegister.cpp  LogModle.cpp  LogModle.h  game_lib.cpp  predefine.h
Game/Core/Compenent/: CPropData.h  CameraController.cpp  CameraController.hpp  ICompenent.cpp  ICompenent.h
Game/Core/Entity/: Entity.cpp  Entity.h
Game/Math/: AABBox.cpp  AABBox.h  Bound.h  Color.cpp  Color.h  Math.cpp  Math.h  MathDefine.h  Matrix.cpp  Matrix.h  OBBox.h  Plane.h  Quaternation.cpp  Quaternation.h  Quaternion.cpp  Rect.h  Sphere.h  Vector.h  math_helper.h
Game/Platform/: DxGraphDevice.cpp  DxGraphDevice.h  DxIntPut.cpp  DxIntPut.h  DxTextPrintWindows.cpp  DxTextPrintWindows.h  PlatformUtil.h  Renderer.cpp  Renderer.h  net_work.cpp  system_table.h  windows_socket.h  windows_thread.h
Game/Platform/Intput/: Input.hpp  InputActionMap.cpp  InputDevice.cpp  InputEngine.cpp  Joystick.cpp  Keyboard.cpp  Mouse.cpp  Sensor.cpp  Touch.cpp
Game/Platform/MsgInput/: MIJoystick.cpp  MIKeyboard.cpp  MIMouse.cpp  MIOVR.cpp  MISensor.cpp  MITouch.cpp  MInput.hpp  MInputEngine.cpp
Game/Platform/Window/: Window.h  WindowWin.cpp  Windows.cpp
Game/Release/Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Game.lastbuildstate
Game/Render/: ElementFormat.cpp  ElementFormat.hpp  ICamera.cpp  ICamera.h  IGameObject.cpp  IGameObject.h  ILight.cpp  ILight.h  IScene.cpp  IScene.h  ITexture.cpp  ITexture.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderLayout.cpp  RenderLayout.h  RenderMaterial.cpp  RenderMaterial.h  Renderable.cpp  Renderable.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h  VertexElement.h
Game/Render/Action/: IActor.h
Game/SDK/rapid/: manual.html  rapidxml.hpp  rapidxml_utils.hpp
Game/SDK/stc/: s3tc.cpp  s3tc.h
Game/System/: Log.cpp  Log.h  Package.cpp  Package.h  ResLoader.cpp  ResLoader.h  Timer.cpp
Game/Tool/: CMakeLists.txt  DllLoader.cpp  DllLoader.hpp  ImageSource.cpp  ImageSource.h  LZMACodec.cpp  LZMACodec.hpp  Package.cpp  UtilString.cpp  UtilString.h  XMLDocument.cpp  XMLDocument.h  XmlFile.cpp  XmlFile.h  gen_npc_config.py  main.cpp
Game/Util/: ErrorHandle.cpp  ErrorHandle.h  ResIdentifier.h  Timer.h  UtilTool.cpp  UtilTool.h  util_string.cpp  util_string.h
Game/include/Manager/: DataManager.h
Game/include/UI/: GmDebugWindow.h
Game/include/game/: GameApi.h  GameContext.h  GmDebugWindow.h  Model.h  Scene.h
Game/src/: Model.cpp  Scene.cpp
Game/src/Game/: DataManager.cpp  GameContext.cpp  GmDebugWindow.cpp  Model.cpp  Scene.cpp
Game/src/Manager/: DataManager.cpp
Game/src/UI/: GmDebugWindow.cpp
Server/: CMakeLists.txt
(+553 files in other folders)
