cmake_minimum_required(VERSION 3.5)
project(Game C CXX)

set(DEMOENGINE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/DemoEngine)
set(ZENGINE_ROOT_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/ZEngine/include)

include(${DEMOENGINE_DIR}/cmake/Compiler.cmake)
include(${DEMOENGINE_DIR}/cmake/Platform.cmake)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(ZENGINE_BIN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/ZEngine/bin/${ZENGINE_PLATFORM_NAME}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ZENGINE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${ZENGINE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${ZENGINE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${ZENGINE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${ZENGINE_BIN_DIR})

add_subdirectory(${DEMOENGINE_DIR})
add_subdirectory(Game)

if(WIN32)
    add_subdirectory(editor)
endif()
