cmake_minimum_required(VERSION 3.5)
project(DemoEngine C CXX)

include(${PROJECT_SOURCE_DIR}/cmake/Compiler.cmake)
include(${PROJECT_SOURCE_DIR}/cmake/Platform.cmake)

set(CMAKE_CXX_STANDARD 20)
set(PROJECT_3RD_DIR ${PROJECT_SOURCE_DIR}/3rd)
set(ZENGINE_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(ZENGINE_ROOT_HEADER ${CMAKE_CURRENT_BINARY_DIR})

set(CMAKE_DEBUG_POSTFIX "_d" CACHE STRING "")
set(CMAKE_RELEASE_POSTFIX "" CACHE STRING "")
set(CMAKE_RELWITHDEBINFO_POSTFIX "" CACHE STRING "")
set(CMAKE_MINSIZEREL_POSTFIX "" CACHE STRING "")

set(ZENGINE_BIN_DIR "${ZENGINE_ROOT_DIR}/bin/${ZENGINE_PLATFORM_NAME}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ZENGINE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${ZENGINE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${ZENGINE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${ZENGINE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${ZENGINE_BIN_DIR})

add_subdirectory(3rd)
file(COPY ${PROJECT_SOURCE_DIR}/common/include DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
add_subdirectory(common)
file(COPY ${PROJECT_SOURCE_DIR}/core/core/include DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
add_subdirectory(core)
add_subdirectory(editor)