cmake_minimum_required(VERSION 3.5)
project(DemoEngine C CXX)

include(${PROJECT_SOURCE_DIR}/cmake/Compiler.cmake)
include(${PROJECT_SOURCE_DIR}/cmake/Platform.cmake)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(PROJECT_3RD_DIR ${PROJECT_SOURCE_DIR}/3rd)
set(ZENGINE_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
get_filename_component(ZENGINE_PARENT_DIR ${CMAKE_CURRENT_SOURCE_DIR} DIRECTORY)
set(ZENGINE_ROOT_HEADER ${ZENGINE_PARENT_DIR}/ZEngine/include)

set(CMAKE_DEBUG_POSTFIX "_d" CACHE STRING "")
set(CMAKE_RELEASE_POSTFIX "" CACHE STRING "")
set(CMAKE_RELWITHDEBINFO_POSTFIX "" CACHE STRING "")
set(CMAKE_MINSIZEREL_POSTFIX "" CACHE STRING "")

set(ZENGINE_BIN_DIR "${ZENGINE_PARENT_DIR}/ZEngine/bin/${ZENGINE_PLATFORM_NAME}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ZENGINE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${ZENGINE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${ZENGINE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${ZENGINE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${ZENGINE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${ZENGINE_BIN_DIR})

option(ZENGINE_ENABLE_TRACY "Enable Tracy frame profiler" OFF)
option(ZENGINE_TRACY_ON_DEMAND "Tracy connects only when a profiler is attached" ON)

add_subdirectory(3rd)
add_subdirectory(common)
add_subdirectory(core)

if(ZENGINE_IS_DEV_PLATFORM)
    ADD_SUBDIRECTORY(tests)
endif()
