include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/ExternalLib.cmake)

FOREACH(flag_var
		CMAKE_C_FLAGS CMAKE_CXX_FLAGS)
	IF(ZENGINE_COMPILER_MSVC OR ZENGINE_COMPILER_CLANGCL)
		STRING(REPLACE "/Wall" "/W0" ${flag_var} "${${flag_var}}")
		STRING(REPLACE "/WX" "/WX-" ${flag_var} "${${flag_var}}")
	ELSE()
		STRING(REPLACE "-Wall" "-w" ${flag_var} "${${flag_var}}")
		STRING(REPLACE "-Werror" "-Wno-error" ${flag_var} "${${flag_var}}")
	ENDIF()
ENDFOREACH()

add_subdirectory(zlib)
add_subdirectory(7z)
add_subdirectory(fmt)
add_subdirectory(NanoRtti)
add_subdirectory(ogg)
add_subdirectory(rapidjson)
add_subdirectory(rapidxml)
add_subdirectory(freetype)
add_subdirectory(RmlUi)
add_subdirectory(scope-lite)
add_subdirectory(vorbis)

if(ZENGINE_IS_DEV_PLATFORM)
	add_subdirectory(imgui)
	#add_subdirectory(d3dcompiler)
	add_subdirectory(assimp)
	add_subdirectory(FreeImage)
	add_subdirectory(googletest)
endif()

if(ZENGINE_PLATFORM_WINDOWS)
	add_subdirectory(dxsdk)
	#add_subdirectory(DirectX-Headers)
endif(ZENGINE_PLATFORM_WINDOWS)
