
UpdateExternalLib("ogg" "https://github.com/xiph/ogg.git" "db03f952b25717fd5c4938817c9290837a4ae1b2")

SET(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
SET(BUILD_TESTING OFF CACHE BOOL "" FORCE)
SET(BUILD_FRAMEWORK OFF CACHE BOOL "" FORCE)
set(INSTALL_DOCS OFF CACHE BOOL "" FORCE)
set(INSTALL_PKG_CONFIG_MODULE OFF CACHE BOOL "" FORCE)
set(INSTALL_CMAKE_PACKAGE_MODULE OFF CACHE BOOL "" FORCE)

add_subdirectory(ogg EXCLUDE_FROM_ALL)

SET_TARGET_PROPERTIES(ogg PROPERTIES
	FOLDER "3rd/ogg"
)
